# DC4-Python

./: .gitignore  DegitalCurlingIO.md  LICENSE  README.ja.md  README.md  aaa.md  load_secrets.py  match_id.json  match_maker.py  md_setting.json  pyproject.toml  readme.md  requirements.txt  sample0.py  sample1.py  sample_client.py  sample_md_client.py  setting.json  team0_config.json  team1_config.json  team_config.json
client0/: client.py  team0_config.json
client1/: client.py  md_client.py
dc4client/: __init__.py  dc_client.py  receive_data.py  send_data.py
dcclient/: __init__.py  dc_client.py  load_secrets.py  receive_data.py  receive_database.py  send_database.py
docs/source/: index.rst
