[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dc4client"
version = "1.0.1"
description = 'Client template for the DC server'
readme = "README.md"
authors = [
    { name = "kr-work", email = "81555178+kr-work@users.noreply.github.com" }
]
license = {file = "LICENSE"}
license-files = ["LICENSE"]
dependencies = [
    "aiohttp==3.11.13",
    "numpy>=1.26.4",
    "requests==2.32.3",
    "uuid6==2024.7.10",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "aiohttp-sse-client2==0.3.0",
]
requires-python = ">= 3.9"

[project.urls]
Repository = "https://github.com/kr-work/DC4-Python.git"